# ChangeLog for app-admin/eselect
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.57 2007/02/07 14:47:46 blubb Exp $

  07 Feb 2007; Simon Stelling <blubb@gentoo.org> eselect-1.0.7.ebuild:
  stable on amd64; bug 160535

  26 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> eselect-1.0.7.ebuild:
  Stable on Alpha.

  25 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> eselect-1.0.7.ebuild:
  Stable on MIPS.

  24 Jan 2007; Marius Mauch <genone@gentoo.org> eselect-1.0.2.ebuild,
  eselect-1.0.7.ebuild, eselect-1.0.8.ebuild:
  Replacing einfo with elog

  16 Jan 2007; Jeroen Roovers <jer@gentoo.org> eselect-1.0.7.ebuild:
  Stable for HPPA (bug #160535).

  15 Jan 2007; Mike Kelly <pioto@gentoo.org>
  +files/eselect-1.0.8-fix-parallel-install.patch, eselect-1.0.8.ebuild:
  Add a patch to really really fix Bug #162008.

*eselect-1.0.8 (14 Jan 2007)

  14 Jan 2007; Mike Kelly <pioto@gentoo.org> +eselect-1.0.8.ebuild:
  Version bump. Really fixes Bug #162008.

  14 Jan 2007; Mike Kelly <pioto@gentoo.org> eselect-1.0.7.ebuild:
  Force non-parallel install for now until all the Makefile issues can be fixed.

  14 Jan 2007; Joseph Jezak <josejx@gentoo.org> eselect-1.0.7.ebuild:
  Marked ppc stable for bug #160535.

  09 Jan 2007; Christian Faulhammer <opfer@gentoo.org> eselect-1.0.7.ebuild:
  stable x86, bug #160535

  09 Jan 2007; Markus Rothe <corsair@gentoo.org> eselect-1.0.7.ebuild:
  Stable on ppc64; bug #160535

  08 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> eselect-1.0.7.ebuild:
  Stable on sparc wrt #160535

  07 Jan 2007; Mike Kelly <pioto@gentoo.org> eselect-1.0.7.ebuild:
  Mark ~amd64 again, since we need to stable a few other things first. See Bug
  #160535.

  06 Jan 2007; Mike Kelly <pioto@gentoo.org> eselect-1.0.7.ebuild:
  Mark stable on amd64 (okayed by Kugelfang).

  06 Jan 2007; Mike Kelly <pioto@gentoo.org> -eselect-1.0.6.ebuild: