@@ -11,14 +11,19 @@ MD5 13bbd3eef751d10d3ffe4ffe590b93f7 files/eselect-no-pgrep.patch 973
 RMD160 03075c713d49f87b7502553284643975b5215974 files/eselect-no-pgrep.patch 973
 SHA256 c273964f9adc92c4fec69d1f7c7b164a8d9f788a49234219d94eb2fca105984f files/eselect-no-pgrep.patch 973
 DIST eselect-1.0.8.tar.bz2 152443 RMD160 52ee673c90adefb4d96c9da4298bd93d8739aee3 SHA1 ddba151bed793da5d1708326a065ecfb51d3a556 SHA256 9185b87bea55418909be9e8d877eae80b0b822e48b3ca45d967b01bf08c550c3
+DIST eselect-1.0.9.tar.bz2 152679 RMD160 0b15674395fa30ad533caf9086575b1aefdc73b5 SHA1 b2eabcf70a529e9fd2fe2d675c941fbd598755ec SHA256 44f29f0926f6b1222857bac2168538cac89855952bc3f9f5eff4bff747fdcdc9
 EBUILD eselect-1.0.8-r0.01.ebuild 1925 RMD160 3aa84e43fb718cdb5eecfabe36875065d060253e SHA1 be8fcca4d33de8328a705a8eb00c43ed621b078b SHA256 ed047d95d143e89a761c9cf2f7b2ecf196991c9df25cd0c3c9bed44cedd76b21
 MD5 94eff773d9793b5fc87539232eedf717 eselect-1.0.8-r0.01.ebuild 1925
 RMD160 3aa84e43fb718cdb5eecfabe36875065d060253e eselect-1.0.8-r0.01.ebuild 1925
 SHA256 ed047d95d143e89a761c9cf2f7b2ecf196991c9df25cd0c3c9bed44cedd76b21 eselect-1.0.8-r0.01.ebuild 1925
-MISC ChangeLog 9409 RMD160 cf58a6f548bd7fe98b1f6650d8dff86253b1b41b SHA1 3b05751607b50ffa4bdbbd4913911ea52064c450 SHA256 e235de319cd8e1cd566a135c5c78035a1fc182a5ad94b0cc8fcd32b2dd62eb19
-MD5 d237bbfca2e5683719d2a91ad3b994e7 ChangeLog 9409
-RMD160 cf58a6f548bd7fe98b1f6650d8dff86253b1b41b ChangeLog 9409
-SHA256 e235de319cd8e1cd566a135c5c78035a1fc182a5ad94b0cc8fcd32b2dd62eb19 ChangeLog 9409
+EBUILD eselect-1.0.9.ebuild 1840 RMD160 7fb9c872f397e3dc9914c2aeef23e84161c069f3 SHA1 9092b2105d7c75abe6bf6402cac0b1deff9eb173 SHA256 c6535c37cb551f20bcdbddd9b8a263a8cfaaf7601fa86874a2ac2602028e0a70
+MD5 f9dcfe2551ea1d096c4d678fdde9af46 eselect-1.0.9.ebuild 1840
+RMD160 7fb9c872f397e3dc9914c2aeef23e84161c069f3 eselect-1.0.9.ebuild 1840
+SHA256 c6535c37cb551f20bcdbddd9b8a263a8cfaaf7601fa86874a2ac2602028e0a70 eselect-1.0.9.ebuild 1840
+MISC ChangeLog 9598 RMD160 d727d8d65c2879da310ec9941b3e5245a8e2d127 SHA1 39dda79d6e74d4189455d180bc07101ae0d4d7d4 SHA256 e1ab77f52ccd67fa9a1d6bc78b4dc596c3ba146f9c7e65d72856d59dc654e481
+MD5 28548d4369d0cea375356fdc48f7a6de ChangeLog 9598
+RMD160 d727d8d65c2879da310ec9941b3e5245a8e2d127 ChangeLog 9598
+SHA256 e1ab77f52ccd67fa9a1d6bc78b4dc596c3ba146f9c7e65d72856d59dc654e481 ChangeLog 9598
 MISC metadata.xml 226 RMD160 c17329676784fd7b99439a08e9e15d942763da61 SHA1 dd05a4ccd4cd23092fbf4248cb13b548d2b0130a SHA256 ef8f7fb97dfc4aed17d7da4859d4b9af2ab812238eee190ab015c57ee896127e
 MD5 ca75babbaadabb722f6415ddec4c0ce8 metadata.xml 226
 RMD160 c17329676784fd7b99439a08e9e15d942763da61 metadata.xml 226
@@ -26,3 +31,6 @@ SHA256 ef8f7fb97dfc4aed17d7da4859d4b9af2ab812238eee190ab015c57ee896127e metadata
 MD5 c9c615e1c108bba186b692b25ef1bea4 files/digest-eselect-1.0.8-r0.01 244
 RMD160 930e65570988be65a7412c0a483b253cb382c3b7 files/digest-eselect-1.0.8-r0.01 244
 SHA256 e288eff9168cd1f039e3a9d2b9e76f40a69cf0d6b3e3acbc0c7ccae11b9ba19f files/digest-eselect-1.0.8-r0.01 244
+MD5 6982c5de8f4afd17cd2c4a09de46e51c files/digest-eselect-1.0.9 244
+RMD160 9f1369cf42cebbaf7c007b7fe96b7e491410c7cf files/digest-eselect-1.0.9 244
+SHA256 713bc75bbe20e81d336ce7ce470ffc3f6655d8906ba890dadb647f5f039dbaed files/digest-eselect-1.0.9 244
