@@ -1,0 +1,3 @@
+MD5 412ff9bb9d67b4bb84641c7e117c8bec eselect-1.0.9.tar.bz2 152679
+RMD160 0b15674395fa30ad533caf9086575b1aefdc73b5 eselect-1.0.9.tar.bz2 152679
+SHA256 44f29f0926f6b1222857bac2168538cac89855952bc3f9f5eff4bff747fdcdc9 eselect-1.0.9.tar.bz2 152679
