@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/eselect
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.57 2007/02/07 14:47:46 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.58 2007/03/28 19:16:48 pioto Exp $
+
+*eselect-1.0.9 (28 Mar 2007)
+
+  28 Mar 2007; <pioto@gentoo.org> +eselect-1.0.9.ebuild:
+  Version bump. Fixes parallel install, improper use of DISTDIR, and some
+  issues with env.eselect.
 
   07 Feb 2007; Simon Stelling <blubb@gentoo.org> eselect-1.0.7.ebuild:
   stable on amd64; bug 160535
